--- a/css/style_.css
+++ b/css/style_.css
@@ -20,6 +20,17 @@ ul {
   top: 0;
   box-shadow: 0px -5px 20px 0 black;
 }
+
+#dropdown-menu2.active {
+  display: flex;
+}
+
+.angle-down {
+  position: absolute;
+  top: 14px;
+  right: 14px;
+  cursor: pointer;
+}
 .header_img img {
   width: 151px;
   height: auto;
@@ -36,9 +47,13 @@ ul {
   position: relative;
   padding: 20px;
 }
-.navbar_list {
+/* .navbar_list {
   position: relative;
   padding-right: 50px;
+} */
+
+.navbar_list > li {
+  padding-right: 20px;
 }
 .youtube_icon {
   background-color: yellow;
@@ -83,9 +98,11 @@ ul {
   fill: #fff;
   animation: animateBox 0.2s ease-in-out;
 }
-.navbar_list ul {
+.navbar_list {
   display: flex;
   list-style: none;
+  padding-right: 50px;
+  position: relative;
 }
 .subnav li a {
   padding: 10px 20px;
@@ -448,6 +465,10 @@ hr {
   font-size: 1.5rem;
   font-weight: bold;
 }
+.video_intr {
+  width: 100%;
+  height: 315px;
+}
 td::before {
   content: ".";
   color: blue;
@@ -496,6 +517,27 @@ td::before {
   /* background-color: burlywood; */
   padding: 10px 50px;
 }
+
+.sub-menu.active {
+  display: flex;
+}
+.sub-menu {
+  flex-direction: column;
+  position: fixed;
+  background-color: #fff;
+  list-style: none;
+  display: none;
+}
+
+.sub-menu li:hover a {
+  color: #fff;
+  background-color: #022869;
+}
+ul li a {
+  padding: 10px 20px;
+  position: relative;
+}
+
 .text_box {
   /* margin-bottom: 20px; */
   padding: 20px 30px;
@@ -609,8 +651,11 @@ input[type="checkbox"] {
   color: #fff;
   font-size: 20px;
 }
-.navbar_list > ul > li > a::after,
-.navbar_list > ul > li > .check::after {
+
+.navbar_list li {
+  position: relative;
+}
+.navbar_list > li > a::after {
   position: absolute;
   content: "";
   bottom: 0;
@@ -623,7 +668,7 @@ input[type="checkbox"] {
   width: 100%;
 }
 .navbar_list ul li:hover a::after,
-.navbar_list ul li:hover .check::after {
+.navbar_list > li:hover a::after {
   opacity: 1;
 }
 .subnav li:hover a {
@@ -1042,5 +1087,12 @@ li .check {
   }
   .fa-regular.fa-calendar-days {
     width: 200px;
+  }
+
+  #menu-menu-1 {
+    flex-direction: column;
+  }
+  .sub-menu {
+    position: relative;
   }
 }
